haskell/katari-compiler/test/golden/expected/04-handle-block.diagnostics.txt
error[K0403]: a request handler must exit with 'break' or 'next' — it cannot fall through to a value
  --> test/golden/cases/04-handle-block.ktr (7:28)
  |
7 |     request fetch_answer() { 42 }
  |                            ^^^^^^
